--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -106,14 +106,36 @@
     "refineButton": "Update Routine",
     "startOverButton": "Start from scratch",
     "loadingMessages": [
-      "Designing your perfect stretch...",
+      "Generating your personal routine...",
+      "This may take a moment...",
+      "It's coming, patience...",
+      "A routine made just for you...",
+      "Almost there...",
+      "Tailored to your unique profile...",
+      "Preparing something special for you...",
       "Listening to your body's needs...",
-      "Selecting exercises for your comfort...",
       "Building your personalized flow...",
+      "Designed exclusively for you...",
+      "Taking your goals into account...",
       "Crafting movements just for you...",
-      "Almost there, finalizing your routine...",
+      "Finalizing your routine...",
+      "Adapting to your specific needs...",
       "Creating your path to flexibility...",
-      "Tailoring stretches to your goals..."
+      "Unlocking your potential...",
+      "Finding the perfect balance for you...",
+      "A routine that fits you perfectly...",
+      "Preparing your body for movement...",
+      "Optimizing for your level...",
+      "Mapping your mobility journey...",
+      "Syncing with your schedule...",
+      "Activating your core...",
+      "Strengthening your foundation...",
+      "Fine-tuning your sequence...",
+      "Preparing recovery exercises...",
+      "Your routine, your body...",
+      "Adjusting your session...",
+      "Energizing your routine...",
+      "Polishing your routine..."
     ]
   },
   "dailyRoutine": {
