--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -105,14 +105,36 @@
     "refineButton": "Actualizar rutina",
     "startOverButton": "Empezar de cero",
     "loadingMessages": [
-      "Diseñando tu estiramiento perfecto...",
+      "Generando tu rutina personal...",
+      "Puede tardar un poco...",
+      "Ya está llegando, ten paciencia...",
+      "Una rutina hecha solo para ti...",
+      "Casi listo...",
+      "Adaptada a tu perfil único...",
+      "Preparando algo especial para ti...",
       "Escuchando las necesidades de tu cuerpo...",
-      "Seleccionando ejercicios para tu comodidad...",
       "Construyendo tu flujo personalizado...",
+      "Diseñada exclusivamente para ti...",
+      "Teniendo en cuenta tus objetivos...",
       "Creando movimientos solo para ti...",
-      "Casi listo, finalizando tu rutina...",
+      "Finalizando tu rutina...",
+      "Adaptando a tus necesidades específicas...",
       "Creando tu camino hacia la flexibilidad...",
-      "Adaptando los estiramientos a tus objetivos..."
+      "Desbloqueando tu potencial...",
+      "Buscando el equilibrio perfecto para ti...",
+      "Una rutina que te encaja perfectamente...",
+      "Preparando tu cuerpo para el movimiento...",
+      "Optimizando para tu nivel...",
+      "Trazando tu viaje de movilidad...",
+      "Sincronizando con tu horario...",
+      "Activando tu centro...",
+      "Fortaleciendo tu base...",
+      "Afinando tu secuencia...",
+      "Preparando ejercicios de recuperación...",
+      "Tu rutina, tu cuerpo...",
+      "Ajustando tu sesión...",
+      "Energizando tu rutina...",
+      "Puliendo tu rutina..."
     ]
   },
   "dailyRoutine": {
@@ -123,7 +145,7 @@
     "startToday": "Empezar la Rutina de Hoy",
     "connected": "Conectado",
     "preparingSession": "Preparando tu sesión del día...",
-    "aiGenerated": "Generado por IA",
+    "aiGenerated": "Generada por IA",
     "exercisesCount": "{count} ejercicios",
     "googleCalendarAlt": "Google Calendar"
   },
