--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -106,14 +106,36 @@
     "refineButton": "Mettre à jour",
     "startOverButton": "Recommencer de zéro",
     "loadingMessages": [
-      "Conception de ton étirement parfait...",
+      "Génération de ta routine personnelle...",
+      "Ça peut prendre un peu de temps...",
+      "Ça arrive, patience...",
+      "Une routine créée rien que pour toi...",
+      "Presque là...",
+      "Adaptée à ton profil unique...",
+      "On prépare quelque chose de spécial pour toi...",
       "À l'écoute des besoins de ton corps...",
-      "Sélection d'exercices pour ton confort...",
       "Construction de ton flux personnalisé...",
+      "Conçue exclusivement pour toi...",
+      "Prise en compte de tes objectifs...",
       "Création de mouvements juste pour toi...",
-      "Presque là, finalisation de ta routine...",
+      "Finalisation de ta routine...",
+      "Adaptation à tes besoins spécifiques...",
       "Création de ton chemin vers la flexibilité...",
-      "Adaptation des étirements à tes objectifs..."
+      "Libération de ton potentiel...",
+      "Recherche de l'équilibre parfait pour toi...",
+      "Une routine qui te correspond parfaitement...",
+      "Préparation de ton corps au mouvement...",
+      "Optimisation pour ton niveau...",
+      "Tracé de ton parcours de mobilité...",
+      "Synchronisation avec ton emploi du temps...",
+      "Activation de ton centre...",
+      "Renforcement de ta base...",
+      "Ajustement fin de ta séquence...",
+      "Préparation des exercices de récupération...",
+      "Ta routine, ton corps...",
+      "Ajustement de ta séance...",
+      "Dynamisation de ta routine...",
+      "Polissage de ta routine..."
     ]
   },
   "dailyRoutine": {
