Fix routine generation time and translations

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -60,7 +60,7 @@
     "routinePolux": "Stretching & Musculation",
     "routineExample": "Example",
     "createNewRoutineWithAI": "Create new Routine with AI",
-    "createNewRoutine": "Create new Routine",
+    "createMorePersonalizedRoutine": "Create a more personalized Routine",
     "goToPractice": "Start the practice",
     "dailyRoutine": "Daily Routine",
     "noRoutinesMessage": "You have no routines yet.",
@@ -89,8 +89,8 @@
   },
   "newRoutine": {
     "title": "New Routine",
-    "description": "Help us build a routine tailored to your body.",
-    "invitationText": "Tell us about your sensations, mobility, physical comfort, and the areas you'd like to improve in your daily life.",
+    "description": "Help us build a routine tailored to your body",
+    "invitationText": "Tell us about your sensations, mobility, physical comfort, and the areas you'd like to improve in your daily life",
     "placeholder": "e.g. tight hips, limited shoulder mobility, feeling stiff after work, recovery after workouts...",
     "generateButton": "Generate my Routine",
     "generating": "Generating...",
@@ -108,9 +108,7 @@
     "loadingMessages": [
       "Generating your personal routine...",
       "This may take a moment...",
-      "It's coming, patience...",
       "A routine made just for you...",
-      "Almost there...",
       "Tailored to your unique profile...",
       "Preparing something special for you...",
       "Listening to your body's needs...",
@@ -122,6 +120,7 @@
       "Adapting to your specific needs...",
       "Creating your path to flexibility...",
       "Unlocking your potential...",
+      "It's coming, patience...",
       "Finding the perfect balance for you...",
       "A routine that fits you perfectly...",
       "Preparing your body for movement...",
@@ -131,6 +130,7 @@
       "Activating your core...",
       "Strengthening your foundation...",
       "Fine-tuning your sequence...",
+      "Almost there...",
       "Preparing recovery exercises...",
       "Your routine, your body...",
       "Adjusting your session...",
