--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -60,7 +60,7 @@
     "routinePolux": "Estiramientos & Musculación",
     "routineExample": "Ejemplo",
     "createNewRoutineWithAI": "Crear nueva Rutina con IA",
-    "createNewRoutine": "Crear una nueva Rutina",
+    "createMorePersonalizedRoutine": "Crear una rutina más personalizada",
     "goToPractice": "Comenzar la práctica",
     "dailyRoutine": "Rutina del día",
     "noRoutinesMessage": "Aún no tienes rutinas.",
@@ -89,8 +89,8 @@
   },
   "newRoutine": {
     "title": "Nueva Rutina",
-    "description": "Ayúdanos a crearte una rutina adaptada.",
-    "invitationText": "Cuéntanos sobre tus sensaciones, movilidad, comodidad física, y las áreas que te gustaría mejorar en tu vida diaria.",
+    "description": "Ayúdanos a crearte una rutina adaptada",
+    "invitationText": "Cuéntanos sobre tus sensaciones, movilidad, comodidad física, y las áreas que te gustaría mejorar en tu vida diaria",
     "placeholder": "ej. caderas apretadas, movilidad limitada de hombros, sensación de rigidez después del trabajo, recuperación después de entrenamientos...",
     "generateButton": "Generar mi rutina",
     "generating": "Generando...",
@@ -107,9 +107,7 @@
     "loadingMessages": [
       "Generando tu rutina personal...",
       "Puede tardar un poco...",
-      "Ya está llegando, ten paciencia...",
       "Una rutina hecha solo para ti...",
-      "Casi listo...",
       "Adaptada a tu perfil único...",
       "Preparando algo especial para ti...",
       "Escuchando las necesidades de tu cuerpo...",
@@ -125,11 +123,13 @@
       "Una rutina que te encaja perfectamente...",
       "Preparando tu cuerpo para el movimiento...",
       "Optimizando para tu nivel...",
+      "Ya está llegando, ten paciencia...",
       "Trazando tu viaje de movilidad...",
       "Sincronizando con tu horario...",
       "Activando tu centro...",
       "Fortaleciendo tu base...",
       "Afinando tu secuencia...",
+      "Casi listo...",
       "Preparando ejercicios de recuperación...",
       "Tu rutina, tu cuerpo...",
       "Ajustando tu sesión...",
