--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -60,7 +60,7 @@
     "routinePolux": "Étirements & Musculation",
     "routineExample": "Exemple",
     "createNewRoutineWithAI": "Créer nouvelle Routine avec IA",
-    "createNewRoutine": "Créer une nouvelle Routine",
+    "createMorePersonalizedRoutine": "Créer une routine plus personnalisée",
     "goToPractice": "Commencer la pratique",
     "dailyRoutine": "Routine du jour",
     "noRoutinesMessage": "Tu n'as pas encore de routines.",
@@ -89,8 +89,8 @@
   },
   "newRoutine": {
     "title": "Nouvelle Routine",
-    "description": "Aide-nous à te construire une routine adaptée.",
-    "invitationText": "Parle-nous de tes sensations, mobilité, confort physique, et des zones que tu aimerais améliorer dans ta vie quotidienne.",
+    "description": "Aide-nous à te construire une routine adaptée",
+    "invitationText": "Parle-nous de tes sensations, mobilité, confort physique, et des zones que tu aimerais améliorer dans ta vie quotidienne",
     "placeholder": "ex. : hanches serrées, mobilité limitée des épaules, sensation de raideur après le travail, récupération après les entraînements...",
     "generateButton": "Générer ma routine",
     "generating": "Génération...",
@@ -108,10 +108,9 @@
     "loadingMessages": [
       "Génération de ta routine personnelle...",
       "Ça peut prendre un peu de temps...",
-      "Ça arrive, patience...",
       "Une routine créée rien que pour toi...",
-      "Presque là...",
       "Adaptée à ton profil unique...",
+      "Ça arrive, patience...",
       "On prépare quelque chose de spécial pour toi...",
       "À l'écoute des besoins de ton corps...",
       "Construction de ton flux personnalisé...",
@@ -131,6 +130,7 @@
       "Activation de ton centre...",
       "Renforcement de ta base...",
       "Ajustement fin de ta séquence...",
+      "Presque là...",
       "Préparation des exercices de récupération...",
       "Ta routine, ton corps...",
       "Ajustement de ta séance...",
