--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -160,7 +160,7 @@
     "subtitle": "Let's personalize your daily sessions",
     "stepProfile": "Profile",
     "stepContext": "Context",
-    "nameLabel": "What's your name?",
+    "nameLabel": "What's your first name?",
     "namePlaceholder": "e.g. Alessio",
     "fitnessLevel": "Fitness Level",
     "levelBeginner": "Beginner",
