--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -11,6 +11,7 @@
     "spanish": "Español",
     "reference": "Reference",
     "referenceValid": "A new routine has been added!",
+    "referenceDemoActivated": "Demo mode activated!",
     "referenceInvalid": "Invalid reference",
     "referenceAlreadyUsed": "This routine is already in your list",
     "reset": "Reset",
