--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -11,6 +11,7 @@
     "spanish": "Español",
     "reference": "Referencia",
     "referenceValid": "¡Una nueva rutina ha sido agregada!",
+    "referenceDemoActivated": "¡Modo demo activado!",
     "referenceInvalid": "Referencia inválida",
     "referenceAlreadyUsed": "Esta rutina ya está en tu lista",
     "reset": "Restablecimiento",
