--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -11,6 +11,7 @@
     "spanish": "Español",
     "reference": "Référence",
     "referenceValid": "Une nouvelle routine vient d'être ajoutée!",
+    "referenceDemoActivated": "Mode démo activé !",
     "referenceInvalid": "Référence invalide",
     "referenceAlreadyUsed": "Cette routine est déjà dans ta liste",
     "reset": "Réinitialisation",
