Update onboarding translations

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -173,20 +173,20 @@
     "goalRecovery": "Recovery & Pain Relief",
     "limitationsLabel": "Injuries or Limitations?",
     "limitationsPlaceholder": "e.g. Lower back pain, stiff neck...",
-    "calendarIntro": "Connect your Google Calendar to allow the AI to adapt your routines to your schedule",
+    "calendarIntro": "Link Google Calendar to your schedule",
     "googleCalendarAlt": "Google Calendar",
     "connectCalendar": "Connect Google Calendar",
     "calendarConnected": "Calendar Connected!",
     "calendarPrivacy": "We only read your schedule to optimize exercise timing",
-    "stravaIntro": "Connect Strava to adapt routines to your physical activity",
+    "stravaIntro": "Sync workouts with Strava",
     "stravaAlt": "Strava",
     "connectStrava": "Connect Strava",
     "stravaConnected": "Strava Connected!",
     "stravaPrivacy": "We only read your activities to adjust intensity",
-    "appleHealthIntro": "Connect Apple Health to sync your health data",
+    "appleHealthIntro": "Import health data from Apple Health",
     "appleHealthAlt": "Apple Health",
     "connectAppleHealth": "Connect Apple Health",
-    "myFitnessPalIntro": "Connect MyFitnessPal to sync your nutrition data",
+    "myFitnessPalIntro": "Track nutrition with MyFitnessPal",
     "myFitnessPalAlt": "MyFitnessPal",
     "connectMyFitnessPal": "Connect MyFitnessPal",
     "comingSoon": "Coming soon",
