--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -172,20 +172,20 @@
     "goalRecovery": "Recuperación y alivio",
     "limitationsLabel": "¿Lesiones o limitaciones?",
     "limitationsPlaceholder": "ej. Dolor lumbar, cuello rígido...",
-    "calendarIntro": "Conecta tu Google Calendar para que la IA adapte tus rutinas a tu horario",
+    "calendarIntro": "Enlaza Google Calendar con tu agenda",
     "googleCalendarAlt": "Google Calendar",
     "connectCalendar": "Conectar Google Calendar",
     "calendarConnected": "¡Calendario conectado!",
-    "calendarPrivacy": "Solo leemos tu agenda para optimizar el momento de los ejercicios",
-    "stravaIntro": "Conecta Strava para adaptar las rutinas a tu actividad física",
+    "calendarPrivacy": "Solo leemos tu agenda para optimizar el momento",
+    "stravaIntro": "Sincroniza entrenamientos con Strava",
     "stravaAlt": "Strava",
     "connectStrava": "Conectar Strava",
     "stravaConnected": "¡Strava conectado!",
     "stravaPrivacy": "Solo leemos tus actividades para ajustar la intensidad",
-    "appleHealthIntro": "Conecta Apple Health para sincronizar tus datos de salud",
+    "appleHealthIntro": "Importa datos desde Apple Health",
     "appleHealthAlt": "Apple Health",
     "connectAppleHealth": "Conectar Apple Health",
-    "myFitnessPalIntro": "Conecta MyFitnessPal para sincronizar tus datos de nutrición",
+    "myFitnessPalIntro": "Sigue la nutrición con MyFitnessPal",
     "myFitnessPalAlt": "MyFitnessPal",
     "connectMyFitnessPal": "Conectar MyFitnessPal",
     "comingSoon": "Próximamente",
