--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -173,20 +173,20 @@
     "goalRecovery": "Récupération & Soulagement",
     "limitationsLabel": "Blessures ou limitations ?",
     "limitationsPlaceholder": "ex. Mal de dos, nuque raide...",
-    "calendarIntro": "Connecte ton Google Calendar pour que l'IA adapte tes routines à ton emploi du temps",
+    "calendarIntro": "Lier Google Calendar à ton agenda",
     "googleCalendarAlt": "Google Calendar",
     "connectCalendar": "Connecter Google Calendar",
     "calendarConnected": "Calendrier connecté !",
-    "calendarPrivacy": "On consulte ton agenda seulement pour optimiser le moment des exercices",
-    "stravaIntro": "Connecte Strava pour adapter les routines à ton activité physique",
+    "calendarPrivacy": "On consulte ton agenda seulement pour optimiser le moment",
+    "stravaIntro": "Sync tes entraînements avec Strava",
     "stravaAlt": "Strava",
     "connectStrava": "Connecter Strava",
     "stravaConnected": "Strava connecté !",
     "stravaPrivacy": "On consulte tes activités seulement pour ajuster l'intensité",
-    "appleHealthIntro": "Connecte Apple Health pour synchroniser tes données de santé",
+    "appleHealthIntro": "Importer tes données depuis Apple Health",
     "appleHealthAlt": "Apple Health",
     "connectAppleHealth": "Connecter Apple Health",
-    "myFitnessPalIntro": "Connecte MyFitnessPal pour synchroniser tes données de nutrition",
+    "myFitnessPalIntro": "Suivre la nutrition avec MyFitnessPal",
     "myFitnessPalAlt": "MyFitnessPal",
     "connectMyFitnessPal": "Connecter MyFitnessPal",
     "comingSoon": "Bientôt disponible",
