Improve Exercice not found section

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -78,6 +78,7 @@
   },
   "exerciseDetails": {
     "notFound": "Exercise not found",
+    "back": "Back",
     "backToLibrary": "Back to Library",
     "benefits": "Benefits",
     "instructions": "Instructions",
