--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -78,6 +78,7 @@
   },
   "exerciseDetails": {
     "notFound": "Ejercicio no encontrado",
+    "back": "Volver",
     "backToLibrary": "Volver a la biblioteca",
     "benefits": "Beneficios",
     "instructions": "Instrucciones",
